--- a/vertical-textview/src/main/res/values/attrs_vertical_text_view.xml
+++ b/vertical-textview/src/main/res/values/attrs_vertical_text_view.xml
@@ -6,10 +6,13 @@
         <attr name="textSize" format="dimension|reference" />
         <attr name="rowSpacing" format="dimension|reference" />
         <attr name="columnSpacing" format="dimension|reference" />
-        <attr name="columnLength" format="integer" />
+        <attr name="columnCharCount" format="integer" />
         <attr name="maxColumns" format="integer" />
         <attr name="includeFontPadding" format="boolean" />
-        <attr name="isCharCenter" format="boolean" />
+        <attr name="textGravity">
+            <flag name="left" value="0" />
+            <flag name="center" value="1" />
+        </attr>
         <attr name="textStyle">
             <flag name="normal" value="0" />
             <flag name="bold" value="1" />
